--- a/day-01/exemplos/kind.yaml
+++ b/day-01/exemplos/kind.yaml
@@ -1,6 +1,9 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+name: linuxtips
 nodes:
 - role: control-plane
 - role: worker
 - role: worker
+
+# kind create cluster --config day-01/exemplos/kind.yaml
