--- a/day-06/desafios/1-ebs-storageclass.yaml
+++ b/day-06/desafios/1-ebs-storageclass.yaml
@@ -4,7 +4,7 @@ metadata:
   name: aws-sc-fast
 reclaimPolicy: Delete
 allowVolumeExpansion: true
-volumeBidingMode: WaitFirstConsumer
+volumeBindingMode: WaitForFirstConsumer
 provisioner: ebs.csi.aws.com
 parameters:
   type: gp3
