--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
   "features": {
   "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-    "version": "20.10"
+    "version": "latest"
   }
   },
   "remoteUser": "vscode",
