Add terminal font family to devcontainer settings

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,6 +28,7 @@
     ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "zsh",
+        "terminal.integrated.fontFamily": "MesloLGS NF",
         "workbench.colorTheme": "Dracula Theme",
         "workbench.iconTheme": "material-icon-theme",
         "terminal.integrated.profiles.linux": {
